--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: Family on the go
 description: 'Reflections on motherhood, parenting, babies and travel'
 
 baseurl: '' # the subpath of your site, e.g. /blog
-url: 'http://colomafarre.github.io' # the base hostname & protocol for your site
+url: 'http://familyonthego.life' # the base hostname & protocol for your site
 
 # Build settings
 markdown:            kramdown
@@ -15,7 +15,7 @@ paginate:            8
 paginate_path:       page/:num/
 
 author:
-    name: 'Coloma Farre' 
+    name: 'Coloma Farre'
     email: 'coloma.farre@gmail.com'
     uri: 'https://github.com/colomafarre'
 
